style: fix alignment on Header

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -11,19 +11,17 @@
 }
 
 .flexContainer {
+    justify-content: space-between;
     max-width: min(90vw, 1500px);
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
+    margin: auto;
     width: 100%;
 }
 
 .flexLink {
     align-content: center;
     justify-items: center;
-    padding: 0;
-    margin: 0 4rem;
+    padding: 0 15px;
     transition: 0.3s ease;
     text-decoration: none;
 }
@@ -32,16 +30,16 @@
     opacity: 0.8;
 }
 
-.flexMenu {
-    justify-content: center;
-    min-width: 40%;
-    width: auto;
-    line-height: 4rem;
-    border: 0;
-    margin: 0;
-    font-size: 1rem;
-}
-
 .flexTitle {
     font-weight: bold !important;
+}
+
+.flexMenu {
+    justify-content: center;
+    min-width: 10vw;
+    width: 502px;
+    line-height: 4rem;
+    border: 0;
+    font-size: 1rem;
+    padding: 0;
 }
